# claude-code-statusline

./: .gitignore  LICENSE  README.md  pyproject.toml  settings.example.json  statusline.py  watcher.py
.github/workflows/: publish-testpypi.yml  publish.yml  test.yml
claude_watcher/: __init__.py  launch_watcher.py  notify.py  statusline.py  watcher.py
hooks/: launch_watcher.py  notify.py
scripts/: install.ps1  merge_settings.py  register-app-id.ps1
tests/: CHECKLIST.md  _toast_test.ps1  test_colors.py  test_install_flows.py  test_notify.py  test_statusline.py  test_watcher.py
