[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-watcher"
version = "0.4.1"
description = "Statusline + notification hook + cross-window tray watcher for Claude Code."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Eran Daniel" }]
keywords = ["claude-code", "anthropic", "statusline", "tray", "watcher"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = []

[project.optional-dependencies]
tray = ["pystray>=0.19", "pillow>=9", "psutil>=5"]

[project.scripts]
claude-watcher = "claude_watcher.watcher:main"
claude-statusline = "claude_watcher.statusline:main"
claude-launch-watcher = "claude_watcher.launch_watcher:main"

[project.urls]
Homepage = "https://github.com/EranDaniel98/claude-code-statusline"
Issues = "https://github.com/EranDaniel98/claude-code-statusline/issues"

[tool.setuptools.packages.find]
include = ["claude_watcher*"]
